--- a/services/nginx/conf.d/localhost.conf
+++ b/services/nginx/conf.d/localhost.conf
@@ -1,7 +1,7 @@
 server {
     listen       80  default;
     server_name  localhost;
-    root   /www/localhost;
+    root   /www/project/public;
     index  index.php index.html index.htm;
     #charset koi8-r;
     
@@ -17,6 +17,12 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
+	location / {
+   		if (!-e $request_filename) {
+   			rewrite  ^(.*)$  /index.php?s=/$1  last;
+    	}
+	}
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
@@ -43,7 +49,7 @@ server {
 server {
     listen 443  default ssl http2;
     server_name  localhost;
-    root   /www/localhost;
+    root   /www/project/public;
     index  index.php index.html index.htm;
     #charset koi8-r;
 
